Corrected the issie with the font-size in the skills section, eliminated the blinkind effect from the inputs in the form, eliminated horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,6 +482,10 @@ html {
   color: #637588;
 }
 
+body {
+  overflow: hidden;
+}
+
 h1 {
   font-family: "Roboto Slab", serif;
 }
@@ -491,6 +495,10 @@ h2 {
   color: #2d3651;
   letter-spacing: 0.1em;
   line-height: 1.2em;
+}
+
+h3 {
+  font-size: 1.125rem;
 }
 
 p {
@@ -808,7 +816,6 @@ input {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 1.25rem;
   -webkit-transition: color 0.5s;
   -o-transition: color 0.5s;
   transition: color 0.5s;
@@ -994,10 +1001,6 @@ input {
   color: #637588;
 }
 
-.form-item__input:first-of-type:active {
-  background-color: #ffffff;
-}
-
 .post-item:nth-of-type(1) {
   grid-area: p1;
 }
@@ -1086,6 +1089,9 @@ input {
   letter-spacing: 0.05rem;
   text-align: center;
   font-size: 1.125rem;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s;
 }
 
 .post-item__caption p {
