--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -9,6 +9,10 @@ html {
     color: $color-gray;
 }
 
+body {
+    overflow: hidden;
+}
+
 h1 {
     font-family: $font-header;
 
@@ -47,6 +51,10 @@ h2 {
         text-align: center;
     }
 
+}
+
+h3 {
+    font-size: 1.125rem;
 }
 
 p {
