--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -77,8 +77,5 @@
     &::placeholder {
         color: $color-gray;
     }
-    &:first-of-type:active {
-        background-color: $color-light;
-    }
   }
 }
