--- a/assets/scss/sections/_section-posts.scss
+++ b/assets/scss/sections/_section-posts.scss
@@ -82,6 +82,7 @@
             letter-spacing: 0.05rem;
             text-align: center;
             font-size: 1.125rem;
+            transition: color 0.5s;
         }
 
         & p {
