--- a/assets/scss/sections/section-skills/_skill-item.scss
+++ b/assets/scss/sections/section-skills/_skill-item.scss
@@ -43,7 +43,6 @@
     height: 100%;
     align-items: center;
     justify-content: center;
-    font-size: 1.25rem;
     transition: color 0.5s;
   }
 
